--- a/src/Paq_Interfaz/Frm_InventarioA2.form
+++ b/src/Paq_Interfaz/Frm_InventarioA2.form
@@ -108,6 +108,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtCa">
               <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCaActionPerformed"/>
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCaKeyPressed"/>
               </Events>
               <Constraints>
