--- a/src/Paq_Interfaz/Frm_Menu.form
+++ b/src/Paq_Interfaz/Frm_Menu.form
@@ -482,6 +482,9 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Verdana" size="12" style="3"/>
                 </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/imagenes/1498177689_gnome-mime-application-x-bzip-compressed-tar.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Gestion Inventario"/>
               </Properties>
               <Events>
@@ -572,6 +575,9 @@
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Verdana" size="12" style="3"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/imagenes/consultacliente32x32.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Ventas por Clientes"/>
               </Properties>
