se corrigio formualio de ventas

--- a/src/Paq_Interfaz/Frm_VentasA.form
+++ b/src/Paq_Interfaz/Frm_VentasA.form
@@ -347,11 +347,13 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtDes">
                   <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDesActionPerformed"/>
                     <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtDesKeyReleased"/>
+                    <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtDesKeyTyped"/>
                   </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="300" y="10" width="80" height="30"/>
+                      <AbsoluteConstraints x="300" y="10" width="60" height="30"/>
                     </Constraint>
                   </Constraints>
                 </Component>
